# cache-credentials-redis-mcp

./: .dockerignore  .env  .env.example  Dockerfile  README.md  docker-compose.yml  fastmcp.json  nginx.conf  pyproject.toml
src/: __init__.py  middlewares.py  server.py  settings.py
src/services/: __init__.py  api.py  database.py  external.py
test_scripts/: test_client_auth.py
