[project]
name = "fastmcp-credential-demo"
version = "0.1.0"
description = "FastMCP credential storage demo with Redis and Fernet encryption"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "fastmcp==2.13.1",
    "py-key-value-aio[valkey]==0.2.8",
    "pydantic-settings==2.12.0",
    "cryptography==46.0.3",
]

[dependency-groups]
dev = [
    "ruff>=0.1.0"
]

[tool.ruff]
line-length = 88
target-version = "py313"
